# LibreModeltrainStudio

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: autobuild.yml  messagecheck.yml
apps/: CMakeLists.txt
apps/esuprogrammer/: CMakeLists.txt  lokprogrammer.cpp  lokprogrammer.h  main.cpp  main.qrc  mainwindow.cpp  mainwindow.h
apps/esuprogrammer/data/standards/: RCN-225.json
apps/esuprogrammer/data/traces/: drive.txt  find-decoder.txt  read-decoder-info.txt  read-decoder-settings.txt  read-programmer-info.txt  read-variable.txt  write-decoder-settings-preserve-defaults.txt  write-decoder-settings-replace-defaults.txt  write-variable.txt
apps/esustudio/: CMakeLists.txt  assets.qrc  audiopreview.cpp  audiopreview.h  decoderinfo.cpp  decoderinfo.h  documentpreview.cpp  documentpreview.h  functioneditor.cpp  functioneditor.h  functiontablemodel.cpp  functiontablemodel.h  imagepreview.cpp  imagepreview.h  main.cpp  mainwindow.cpp  mainwindow.h  metadata.cpp  metadata.h  package.cpp  package.h  packageexplorer.cpp  packageexplorer.h  packagelistmodel.cpp  packagelistmodel.h  packagesummary.cpp  packagesummary.h  soundsloteditor.cpp  soundsloteditor.h  soundslottablemodel.cpp  soundslottablemodel.h
apps/lmrstudio/: CMakeLists.txt  accessorycontrolview.cpp  accessorycontrolview.h  accessorytablemodel.cpp  accessorytablemodel.h  automationview.cpp  automationview.h  debugview.cpp  debugview.h  decoderdatabaseview.cpp  decoderdatabaseview.h  detectorinfotablemodel.cpp  detectorinfotablemodel.h  deviceconnectionview.cpp  deviceconnectionview.h  deviceparameterwidget.cpp  deviceparameterwidget.h  functionmappingview.cpp  functionmappingview.h  main.cpp  main.qrc  mainwindow.cpp  mainwindow.h  multideviceview.cpp  multideviceview.h  speedmeterview.cpp  speedmeterview.h  trackplanview.cpp  trackplanview.h  variableeditorview.cpp  variableeditorview.h  vehiclecontrolview.cpp  vehiclecontrolview.h
apps/lmrstudio/i18n/: lmrsstudio.de.ts  lmrsstudio.en.ts
apps/lmrstudio/qml/: AutomationParameterEditor.qml  AutomationView.qml  Style.qml
cmake/: FindCompilerCache.cmake  FindSphinx.cmake  FontAwesome.cmake  LmrsSupport.cmake
docs/: CMakeLists.txt
docs/sphinx/: conf.py  index.rst  links.rst  readme.rst
docs/sphinx/core/: index.rst
docs/sphinx/gui/: index.rst
docs/sphinx/studio/: index.rst
docs/sphinx/widgets/: index.rst
issues/all/: 0001-freakloop-z21.txt  0002-endless-connect.txt  0003-spinbox-width-on-hidpi.txt
issues/open/: 0001-freakloop-z21.txt  0002-endless-connect.txt
lmrs/: CMakeLists.txt
lmrs/core/: CMakeLists.txt  accessories.cpp  accessories.h  algorithms.cpp  algorithms.h  automationmodel.cpp  automationmodel.h  continuation.cpp  continuation.h  dccconstants.cpp  dccconstants.h  dccrequest.cpp  dccrequest.h  decoderinfo.cpp  decoderinfo.h  decoderinfo.qrc  detectors.cpp  detectors.h  device.cpp  device.h  fileformat.cpp  fileformat.h  framestream.cpp  framestream.h  localization.cpp  localization.h  logging.cpp  logging.h  memory.cpp  memory.h  model.cpp  model.h  parameters.cpp  parameters.h  propertyguard.cpp  propertyguard.h  quantities.cpp  quantities.h  staticinit.cpp  staticinit.h  (+14 more)
lmrs/core/data/: decoders.json  manufacturers.json
lmrs/core/i18n/: lmrscore.de.ts  lmrscore.en.ts
lmrs/esu/: CMakeLists.txt  functionmappingmodel.cpp  functionmappingmodel.h  lp2constants.cpp  lp2constants.h  lp2device.cpp  lp2device.h  lp2message.cpp  lp2message.h  lp2request.cpp  lp2request.h  lp2response.cpp  lp2response.h  lp2stream.cpp  lp2stream.h
lmrs/esu/i18n/: lmrsesu.de.ts  lmrsesu.en.ts
lmrs/gui/: CMakeLists.txt  fontawesome.cpp  fontawesome.h  fontawesome.qrc  localization.cpp  localization.h  symbolfonts.cpp  symbolfonts.h
lmrs/kpfzeller/: CMakeLists.txt  scdevice.cpp  scdevice.h
lmrs/kpfzeller/i18n/: lmrskpfzeller.de.ts  lmrskpfzeller.en.ts
lmrs/roco/: CMakeLists.txt  z21appfileformats.cpp  z21appfileformats.h  z21appfilesharing.cpp  z21appfilesharing.h  z21client.cpp  z21client.h  z21device.cpp  z21device.h
lmrs/roco/i18n/: lmrsroco.de.ts  lmrsroco.en.ts
lmrs/serial/: CMakeLists.txt  serialportmodel.cpp  serialportmodel.h
lmrs/widgets/: CMakeLists.txt  actionutils.cpp  actionutils.h  documentmanager.cpp  documentmanager.h  navigationtoolbar.cpp  navigationtoolbar.h  recentfilemenu.cpp  recentfilemenu.h  speeddial.cpp  speeddial.h  speedmeter.cpp  speedmeter.h  spinbox.cpp  spinbox.h  statusbar.cpp  statusbar.h  symbolictrackplanview.cpp  symbolictrackplanview.h  widgets.qrc
lmrs/widgets/i18n/: lmrswidgets.de.ts  lmrswidgets.en.ts
lmrs/widgets/qml/: SpeedMeter.qml
lmrs/zimo/: CMakeLists.txt  mx1device.cpp  mx1device.h  mx1message.cpp  mx1message.h
lmrs/zimo/i18n/: lmrszimo.de.ts  lmrszimo.en.ts
tests/auto/: CMakeLists.txt  tst_algorithms.cpp  tst_automation.cpp  tst_continuation.cpp  tst_dccconstants.cpp  tst_dccrequest.cpp  tst_lp2message.cpp  tst_lp2stream.cpp  tst_propertyguard.cpp  tst_speeddial.cpp  tst_staticinit.cpp  tst_variablecontrol.cpp  tst_z21client.cpp
tests/manual/: CMakeLists.txt  SpeedMeterTest.qml
tools/: CMakeLists.txt  esu-to-z21.py  update-nmra-manufacturers.py
